Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53337

[Qt Charts] setting gridlinecolor to black still uses the default color

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.6.2
    • 5.8.0
    • Charts
    • Desktop Linux
    •  1dbd61a9ea85094f318244cc8ba3d130db693eea

      Take the /opt/Qt/EnterpriseAddOns/Charts/2.1/Src/examples/charts/qmlchart/qml/qmlchart/View4.qml chart example and add gridlinecolor:"black" to the axis or used the attached file:

             ValueAxis {
                  id: valueAxis
                  min: 2000
                  max: 2011
                  tickCount: 12
                  labelFormat: "%.0f"
                  gridLineColor: "black"//"#010101"
              }
      
              ValueAxis {
                  id: valueAxisY
                  min: 0
                  max: 4.0
                  labelFormat: "%.0f"
                  gridLineColor: "black"//"#010101"
              }
      

      Result: The grids colors are light grey
      Expected Result: The grids colors are black
      Workaround: use "#010101" color which is close to black
      Note: works with other colors, like orange, steelblue

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            e0348803 Miikka Heikkinen
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes