Fix setting axis color properties to black for the first time

The color properties didn't correctly check if the default pen/brush
was in use and force the color setting in that case.

Task-number: QTBUG-53337
Change-Id: Iaafcf105973f601be74e60d6d669f5fd16fa347f
Reviewed-by: Mika Salmela <mika.salmela@qt.io>
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>